--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   flutter_bloc: ^6.0.1
   equatable: ^1.2.2
   cupertino_icons: ^0.1.3
+  get_it: ^4.0.4
+  rxdart: 0.24.1
+  logger: ^0.9.1
 
 dev_dependencies:
   flutter_test:
